fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,9 @@ body {
 }
 
 @media (max-width: 480px) {
+  body {
+    overflow-x: hidden;
+  }
   .title {
     font-size: 24px;
     margin: 0 0 30px 0;
